# project2_-Lamotkin-_-Andrey-_-25-555-

./: .gitignore  Makefile  README.md  db_meta.json  demo.cast  demo_decorators.cast  pyproject.toml
data/: users.json
src/primitive_db/: core.py  decorators.py  engine.py  main.py  utils.py
